Bug 51257: Improve chapter dropdown for books with many chapters.
Add scrollbar, limit height of the div

--- a/modules/ext.BookManagerv2js.css
+++ b/modules/ext.BookManagerv2js.css
@@ -60,3 +60,7 @@ div.mw-bookmanagerv2-nav-toc {
 div.mw-bookmanagerv2-nav-dropdown .title {
 	font-style: italic;
 }
+div.mw-bookmanagerv2-nav-scrollable {
+	max-height: 300px;
+	overflow: auto;
+}
